--- a/catadvice.html
+++ b/catadvice.html
@@ -76,14 +76,13 @@ Threat Mitigation: Compare against list of whitelisted links - prevent a change 
       <p>Hello there and welcome to our advice page.</p>
       <p>Owning a cat can sometimes be quite the task so we've put together some sources for advice on cats.</p>
       <p>Click the image to go to the corresponding website.</p>
-        <a href="https://www.cats.org.uk/help-and-advice"><img src="images/catsprotection.png" width="100" height="=100"></a>
+        <a href="https://www.cats.org.uk/help-and-advice"><img src="images/catsprotection.png" width="100" height="100" alt="cat sticking its tongue out"></a>
 
         <a class="twitter-timeline" data-width="600" data-height="300" href="https://twitter.com/CatsProtection?ref_src=twsrc%5Etfw">Tweets by CatsProtection</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>     
     </div>
 
 
 
-    <main>
       <!-- Contact form -->
       <form>
           <fieldset>
@@ -114,14 +113,13 @@ Threat Mitigation: Compare against list of whitelisted links - prevent a change 
 
 
 
-  </main>
 
   <!-- Archie information -->
   <aside>
     <div>
-      <img src="images/sillycat1.png" width="100px" height="100px" id="asideTagImage" class="archieImage">
-      <p id="asideTag">a word from archie</p>
-      <p id="asideTag">hi there i'm archie - one of the society's mascots - i hope this information is useful.</p>
+      <img src="images/sillycat1.png" width="100" height="100" class="archieImage" alt="cat sticking its tongue out">
+      <p class="asideTag">a word from archie</p>
+      <p class="asideTag">hi there i'm archie - one of the society's mascots - i hope this information is useful.</p>
 
     </div>
   </aside>
