--- a/current_members.html
+++ b/current_members.html
@@ -3,9 +3,9 @@ Threat Model
 Threat Source: External
 Threat Agent: Human
 Threat Intention: Intentional
-Threat Motivation: Embarrassment of the society
+Threat Motivation: Embarrassment of the society/criminal damage (identity theft)
 Threat Impact: Defacement of society website, changing of members images, possible identify theft of members.
-Threat Mitigation: Login validation, 2FA in place before member images can be changed, email updates to members whose images have been changed.
+Threat Mitigation: Login validation, 2FA in place before member images can be changed, email updates to members whose images have been changed as well as the system administrator.
 -->
 
 <!DOCTYPE html>
@@ -69,7 +69,6 @@ Threat Mitigation: Login validation, 2FA in place before member images can be ch
                     <h5>Matt</h5>
                 </div>
             </div>
-        </div>
 
         <!-- Picture of Jaron with text -->
         <div class="col-sm" style="text-align: center;">
@@ -77,7 +76,6 @@ Threat Mitigation: Login validation, 2FA in place before member images can be ch
             <img src="images/jaron.JPG" class="rounded-circle massie-hovering" width="120" height="120"
                 style="overflow:hidden" alt="Picture of Matt - brown hair/stubble">
             <h5>Jaron</h5>
-        </div>
     </div>
 </div>
 
