--- a/shop.html
+++ b/shop.html
@@ -114,9 +114,9 @@ Threat Mitigation: Compare against list of whitelisted links - prevent a change 
   <!-- Archie information -->
   <aside>
     <div>
-      <img src="images/sillycat1.png" width="100px" height="100px" id="asideTagImage" class="archieImage">
-      <p id="asideTag">a word from archie</p>
-      <p id="asideTag">hi there i'm archie - one of the society's mascots - i hope this shop finds you well.</p>
+      <img src="images/sillycat1.png" width="100" height="100" class="archieImage" alt="picture of cat sticking its tongue out">
+      <p class="asideTag">a word from archie</p>
+      <p class="asideTag">hi there i'm archie - one of the society's mascots - i hope this shop finds you well.</p>
 
     </div>
   </aside>
