--- a/index.html
+++ b/index.html
@@ -107,21 +107,21 @@ Threat Mitigation: Login validation, 2FA in place before video/text can be chang
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img src="images/sillycat1.png" class="d-block w-100 carouselTagImage" alt="...">
+          <img src="images/sillycat1.png" class="d-block w-100 carouselTagImage" alt="cat sticking tongue out">
           <div class="carousel-caption d-none d-md-block">
             <h5>WLEEE SO SILLY</h5>
             <p class="pCarousel">this silly boy is sticking his little tongue out!</p>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="images/sillycat2.png" class="d-block w-100 carouselTagImage" alt="...">
+          <img src="images/sillycat2.png" class="d-block w-100 carouselTagImage" alt="cat with surprised face">
           <div class="carousel-caption d-none d-md-block">
             <h5>OMG THE SHOCKER</h5>
             <p class="pCarousel">he is shocked i wonder what he is shocked about.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/sillycat3.png" class="d-block w-100 carouselTagImage" alt="...">
+          <img src="images/sillycat3.png" class="d-block w-100 carouselTagImage" alt="tiny black kitten">
           <div class="carousel-caption d-none d-md-block">
             <h5>WAGOOGUS JR</h5>
             <p class="pCarousel">he just a itty bitty lil boi.</p>
@@ -144,9 +144,9 @@ Threat Mitigation: Login validation, 2FA in place before video/text can be chang
   <!-- Twitter embed -->
   <aside>
     <div>
-      <img src="images/sillycat1.png" width="100px" height="100px" id="asideTagImage">
-      <p id="asideTag">cat society</p>
-      <p id="asideTag">the cat society has lots of activities up and coming. we hope you will look forward to them.</p>
+      <img src="images/sillycat1.png" width="100" height="100" class="asideTagImage" alt = "cat sticking tongue out">
+      <p class="asideTag">cat society</p>
+      <p class="asideTag">the cat society has lots of activities up and coming. we hope you will look forward to them.</p>
 
     </div>
   </aside>
